--- a/frontend/src/app/stock-overview/stock-overview.component.html
+++ b/frontend/src/app/stock-overview/stock-overview.component.html
@@ -8,29 +8,36 @@
 <table id="table" class="table table-hover">
   <thead>
     <tr>
-      <th class="header" scope="col">
-        Kategorie
-      </th>
-      <th class="header" scope="col">
-        Bestand
-      </th>
+      <th class="header" scope="col">Kategorie</th>
+      <!-- <th class="header" scope="col">Bestand</th> -->
     </tr>
   </thead>
   <tbody>
     <ng-container *ngFor="let category of dataService.categories()">
       <tr>
-        <td >
-          <div (click)="toggleCategory(category)" style="padding-left: 20px;"> 
-            {{ category.name }}
+        <td>
+          <div (click)="toggleCategory(category)" style="padding-left: 20px">
+            {{ category.name }} Gesamt-Bestand {{ stockByCategory[category.id!] }}
           </div>
           <ul *ngIf="selectedCategory === category">
             <li *ngFor="let subCategory of subCategories()">
-              <div (click)="toggleSubCategory(subCategory)" style="padding-left: 40px;"> <!-- Einrückung für Unterkategorie -->
+              <div
+                (click)="toggleSubCategory(subCategory)"
+                style="padding-left: 40px"
+              >
+                <!-- Einrückung für Unterkategorie -->
                 {{ subCategory.name }} - {{ subCategory.stock }}
                 <ul *ngIf="selectedSubCategory === subCategory">
                   <li *ngFor="let meatPiece of meatPieces()">
-                    <div style="padding-left: 60px;"> 
-                      {{ meatPiece.name }} - {{ meatPiece.stock }}
+                    <div style="padding-left: 60px">
+                      {{ meatPiece.name }} {{ meatPiece.stock }}
+                      <button (click)="increaseStockForMeatPiece($event, meatPiece)"  data-bs-target="#exampleModal" data-bs-toggle="modal">
+                        Bestand ändern
+                      </button>
+                      €/kg: {{ meatPiece.pricePerKg }}
+                      <button (click)="setPrice($event, meatPiece)"  data-bs-target="#priceModal" data-bs-toggle="modal">
+                      Preis/kg festlegen
+                      </button>
                     </div>
                   </li>
                 </ul>
@@ -38,8 +45,63 @@
             </li>
           </ul>
         </td>
-        <td>{{ stockByCategory[category.id!] }}</td>
       </tr>
     </ng-container>
   </tbody>
 </table>
+
+<!-- Bestand Modal -->
+<div #exampleModal class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Bestand ändern
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Was sollte der neue Bestand von {{ selectedMeatPiece().name }} sein?
+        <input [(ngModel)]="stockInput" type="number" class="form-control" placeholder="Menge" aria-label="Menge"
+          aria-describedby="basic-addon1" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Abbrechen
+        </button>
+        <button (click)="updateStock()" type="button" data-bs-dismiss="modal" class="btn btn-success">
+          Bestand hinzufügen
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Preis Modal -->
+<div #exampleModal class="modal fade" id="priceModal" tabindex="-1" 
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Preis pro KG festlegen
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       Wie hoch sollte der Preis/kg für {{ selectedMeatPiece().name }} sein?
+        <input [(ngModel)]="priceInput" type="number" class="form-control" placeholder="€" aria-label="Menge"
+          aria-describedby="basic-addon1" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Abbrechen
+        </button>
+        <button (click)="updatePrice()" type="button" data-bs-dismiss="modal" class="btn btn-success">
+         Preis ändern
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
