--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -28,7 +28,7 @@
       <td>
         {{order.customerId}}
       </td>
-      <td>Kategorie to do</td>
+      <td>kategorie</td>
       <td>{{order.date | date : "dd.MM.yyyy HH:mm"}}</td>
       <td>{{order.amount}} kg</td>
       <td>{{order.price}} €</td>
