--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -17,27 +17,40 @@
     </table>
   </div> -->
   </div>
-<!-- Anzeige der hinzugefügten Ochsen -->
-<div class="oxen-container">
-  <h3>Ochsen:</h3>
-  <div class="oxen-list">
-    <p class="oxText" *ngIf="oxen.length===0">Noch keiner vorhanden</p>
-    <div *ngFor="let ox of oxen" class="ox-item">{{ ox }}</div>
-    <!-- Plus-Symbol -->
-    <button *ngIf="showPlusButton" class="btn btn-plus" (click)="toggleOxInput()">+</button>
+  <!-- EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN
+@if (selectedMeatPiece.name?.length! > 0) {
+    <div class="container">
+      <h4>Ausgewählt: {{selectedMeatPiece.name}}</h4>
+      <ul class="list-group">
+        <li class="list-group-item">Teilstück 1kg</li>
+        <li class="list-group-item">Teilstück 2kg</li>
+        <li class="list-group-item">Teilstück 3kg</li>
+        <li class="list-group-item">Teilstück 4kg</li>
+        <li class="list-group-item">Teilstück 5kg</li>
+      </ul>
+    </div>
+  }
+  -->
+
+
+  <!-- Anzeige der hinzugefügten Ochsen -->
+  <div class="oxen-container">
+    <h3>Ochsen:</h3>
+    <div class="oxen-list">
+      <p class="oxText" *ngIf="oxen.length===0">Noch keiner vorhanden</p>
+      <div *ngFor="let ox of oxen" class="ox-item">{{ ox }}</div>
+      <!-- Plus-Symbol -->
+      <button *ngIf="showPlusButton" class="btn btn-plus" (click)="toggleOxInput()">+</button>
+    </div>
   </div>
-</div>
 
-<!-- Texteingabefeld für den Namen des Ochsen -->
-<div *ngIf="showOxInput" class="ox-input-container">
-  <div class="input-group" style="display: flex!important;">
-    <input  type="text" class="form-control" placeholder="Name" [(ngModel)]="oxName">
-    <button class="btn btn-orange" (click)="addOx(); toggleOxInput()">Hinzufügen</button>
+  <!-- Texteingabefeld für den Namen des Ochsen -->
+  <div *ngIf="showOxInput" class="ox-input-container">
+    <div class="input-group" style="display: flex!important;">
+      <input type="text" class="form-control" placeholder="Name" [(ngModel)]="oxName">
+      <button class="btn btn-orange" (click)="addOx(); toggleOxInput()">Hinzufügen</button>
+    </div>
   </div>
-</div>
-
-
-
 
   <!-- Save File -->
   <div id="save-file-button" (click)="exportButtonClick()">
@@ -119,8 +132,8 @@
         <!-- Todo: Kunde Select -->
         <td>
           <select id="selectPerson" class="form-select" [(ngModel)]="addSelectedCustomerId">
-            <option value="" disabled selected>Wählen Sie bitte einen Kunden:</option>
-            <option *ngFor="let customer of dataService.customers()" [value]="customer.id">
+            <option value="" [selected]="!addSelectedCustomerId">Wählen Sie bitte einen Kunden:</option>
+            <option *ngFor="let customer of dataService.customers()" [ngValue]="customer.id">
               {{customer.name}}
             </option>
           </select>
