--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -17,20 +17,20 @@
     </table>
   </div> -->
   </div>
-  <!-- EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN EINBLENDEN
-@if (selectedMeatPiece.name?.length! > 0) {
-    <div class="container">
-      <h4>Ausgewählt: {{selectedMeatPiece.name}}</h4>
-      <ul class="list-group">
-        <li class="list-group-item">Teilstück 1kg</li>
-        <li class="list-group-item">Teilstück 2kg</li>
-        <li class="list-group-item">Teilstück 3kg</li>
-        <li class="list-group-item">Teilstück 4kg</li>
-        <li class="list-group-item">Teilstück 5kg</li>
-      </ul>
-    </div>
+
+  @if (selectedMeatPiece.name?.length! > 0) {
+  <div class="container">
+    <h4>Ausgewählt: {{selectedMeatPiece.name}}</h4>
+    <ul class="list-group">
+      <li class="list-group-item">Teilstück 1kg</li>
+      <li class="list-group-item">Teilstück 2kg</li>
+      <li class="list-group-item">Teilstück 3kg</li>
+      <li class="list-group-item">Teilstück 4kg</li>
+      <li class="list-group-item">Teilstück 5kg</li>
+    </ul>
+  </div>
   }
-  -->
+
 
 
   <!-- Anzeige der hinzugefügten Ochsen -->
@@ -217,4 +217,39 @@
       </tr>
     </tbody>
   </table>
+
+  <!-- Button trigger modal -->
+  <button  data-bs-target="#exampleModal" data-bs-toggle="modal"
+          class="btn btn-secondary">
+          <mat-icon>add</mat-icon>
+        </button>
+
+  <!-- Modal -->
+  <div #exampleModal class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Bestand hinzufügen
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Wie viel (kg) {{ dataService.selectedSubCategory().name }} möchtest du
+        hinzufügen?
+        <input type="number" class="form-control" placeholder="Menge" aria-label="Menge"
+          aria-describedby="basic-addon1" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Abbrechen
+        </button>
+        <button type="button" data-bs-dismiss="modal" class="btn btn-success">
+          Bestand hinzufügen
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
